--- a/app/src/main/res/layout/fragment_home_rvitem_layout.xml
+++ b/app/src/main/res/layout/fragment_home_rvitem_layout.xml
@@ -8,42 +8,42 @@
         android:id="@+id/host_cover"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_launcher_background"/>
+        android:background="@drawable/ic_launcher_background" />
 
     <ImageView
         android:id="@+id/live_state"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="45dp"
+        android:layout_height="34dp"
         android:background="@drawable/ic_launcher_background"
-        tools:layout_editor_absoluteX="98dp"
+        tools:layout_editor_absoluteX="63dp"
         tools:layout_editor_absoluteY="0dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="主播昵称"
-        tools:layout_editor_absoluteX="56dp"
+        tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="108dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="qaz"
-        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteX="65dp"
         tools:layout_editor_absoluteY="108dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="主播人气"
-        tools:layout_editor_absoluteX="42dp"
+        tools:layout_editor_absoluteX="239dp"
         tools:layout_editor_absoluteY="108dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="11111111"
-        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteX="304dp"
         tools:layout_editor_absoluteY="108dp" />
 
 </android.support.constraint.ConstraintLayout>
