--- a/app/src/main/res/layout/activity_home_layout.xml
+++ b/app/src/main/res/layout/activity_home_layout.xml
@@ -1,27 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:hjm="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
 
     <com.youth.banner.Banner
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/home_banner"
-        android:layout_width="wrap_content"
-        android:layout_height="80dp">
-    </com.youth.banner.Banner>
-
-
-    <com.hjm.bottomtabbar.BottomTabBar
-        android:id="@+id/home_bottom_tab_bar"
-        hjm:tab_font_size="14px"
-        hjm:tab_padding_bottom="5px"
-        hjm:tab_padding_top="5px"
-        hjm:tab_img_width="70px"
-        hjm:tab_img_height="70px"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="120dp"/>
 
-    </com.hjm.bottomtabbar.BottomTabBar>
-</LinearLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="332dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/home_banner" />
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        app:itemIconTint="@drawable/bottom_navigation_selector"
+        app:itemTextColor="@drawable/bottom_navigation_selector"
+        app:menu="@menu/menu_bottom_navigation" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_above="@id/bottom_navigation"
+        android:background="@drawable/bottom_shadow" />
+
+</RelativeLayout>
