--- a/app/src/main/res/layout/fragment_home_rvitem_layout.xml
+++ b/app/src/main/res/layout/fragment_home_rvitem_layout.xml
@@ -1,49 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/host_cover"
+        android:id="@+id/home_rvitem_cover"
+        android:layout_width="177dp"
+        android:layout_height="190dp"/>
+
+    <ImageView
+        android:id="@+id/home_rvitem_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_launcher_background" />
-
-    <ImageView
-        android:id="@+id/live_state"
-        android:layout_width="45dp"
-        android:layout_height="34dp"
-        android:background="@drawable/ic_launcher_background"
-        tools:layout_editor_absoluteX="63dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@id/home_rvitem_cover"/>
 
     <TextView
+        android:id="@+id/home_rvitem_anchorNickname_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="主播昵称"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="108dp" />
+        android:layout_alignBottom="@id/home_rvitem_cover"/>
 
     <TextView
+        android:id="@+id/home_rvitem_anchorNickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="qaz"
-        tools:layout_editor_absoluteX="65dp"
-        tools:layout_editor_absoluteY="108dp" />
+        android:layout_alignBottom="@id/home_rvitem_cover"
+        android:layout_toRightOf="@id/home_rvitem_anchorNickname_tv"
+        android:text="qaz" />
+
+    <ImageView
+        android:id="@+id/home_rvitem_roomUserCount_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@id/home_rvitem_cover"
+        android:layout_toRightOf="@id/home_rvitem_anchorNickname"
+        android:layout_marginRight="0dp"
+        android:text="主播人气" />
 
     <TextView
+        android:id="@+id/home_rvitem_roomUserCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="主播人气"
-        tools:layout_editor_absoluteX="239dp"
-        tools:layout_editor_absoluteY="108dp" />
+        android:layout_toRightOf="@+id/home_rvitem_roomUserCount_iv"
+        android:layout_alignBottom="@id/home_rvitem_cover"
+        android:text="111"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="11111111"
-        tools:layout_editor_absoluteX="304dp"
-        tools:layout_editor_absoluteY="108dp" />
-
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
