--- a/app/src/main/res/layout/activity_home_layout.xml
+++ b/app/src/main/res/layout/activity_home_layout.xml
@@ -6,33 +6,41 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-
-    <com.youth.banner.Banner
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/home_banner"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/home_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="120dp"/>
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/AppTheme">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="24sp"
+            android:textColor="@color/rv_item_nickname"
+            android:text="首页"/>
+    </android.support.v7.widget.Toolbar>
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/viewpager"
+        android:id="@+id/home_viewpager"
         android:layout_width="match_parent"
-        android:layout_height="332dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/home_banner" />
+        android:layout_height="wrap_content"
+        android:layout_below="@id/home_toolbar"
+        android:layout_above="@id/home_view"/>
+
+    <View
+        android:id="@+id/home_view"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_above="@id/home_bottom_navigation"
+        android:background="@drawable/bottom_shadow"/>
 
     <android.support.design.widget.BottomNavigationView
-        android:id="@+id/bottom_navigation"
+        android:id="@+id/home_bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         app:itemIconTint="@drawable/bottom_navigation_selector"
         app:itemTextColor="@drawable/bottom_navigation_selector"
-        app:menu="@menu/menu_bottom_navigation" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="5dp"
-        android:layout_above="@id/bottom_navigation"
-        android:background="@drawable/bottom_shadow" />
-
+        app:menu="@menu/menu_bottom_navigation"/>
 </RelativeLayout>
