--- a/app/src/main/res/layout/fragment_home_layout.xml
+++ b/app/src/main/res/layout/fragment_home_layout.xml
@@ -1,41 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".fragemengt.home.HomeFragment">
-
-
-
-    <TextView
-        android:id="@+id/fm_home_tv"
+    tools:context=".view.fragemengt.home.HomeFragment">
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="小编推荐"
-        android:textSize="16dp"
-        android:textStyle="bold"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <com.youth.banner.Banner
+            android:id="@+id/home_banner"
+            android:layout_width="wrap_content"
+            android:layout_height="167dp"
+            app:title_textsize="22sp"
+            android:layout_below="@id/home_toolbar"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/fm_home_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    </android.support.v7.widget.RecyclerView>
+            <TextView
+                android:id="@+id/fm_home_recommend_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text_view"
+                android:textSize="22sp"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="精彩直播"
-        android:textSize="16dp"
-        android:textStyle="bold"/>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/fm_home_recommend_recycler_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/fm_home_show_live_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text_view"
+                android:textSize="22sp"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/fm_home_live_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </android.support.v7.widget.RecyclerView>
-
-
-</LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/fm_home_show_live_recycler_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+    </LinearLayout>
+</ScrollView>
