--- a/app/src/main/res/layout/fragment_my_layout.xml
+++ b/app/src/main/res/layout/fragment_my_layout.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragemengt.my.MyFragment">
+    tools:context=".view.fragemengt.home.MyFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
