--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -2,14 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/item_home"
-        android:icon="@mipmap/ic_home_gray"
+        android:icon="@mipmap/ic_home_bottom_unchecked"
         android:title="首页" />
     <item
         android:id="@+id/item_follow"
-        android:icon="@mipmap/ic_follow_white"
+        android:icon="@mipmap/ic_home_follow_unchecked"
         android:title="关注" />
     <item
         android:id="@+id/item_my"
-        android:icon="@mipmap/ic_my_white"
+        android:icon="@mipmap/ic_home_my_unchecked"
         android:title="我的" />
 </menu>
