--- a/app/src/main/res/layout/fragment_home_recommend_rvitem_layout.xml
+++ b/app/src/main/res/layout/fragment_home_recommend_rvitem_layout.xml
@@ -4,6 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="@dimen/y8"
+    android:layout_marginLeft="@dimen/x4"
+    android:layout_marginRight="@dimen/x11"
+    android:layout_marginBottom="@dimen/y6"
     app:cardCornerRadius="10dp">
 
     <RelativeLayout
@@ -17,29 +21,28 @@
 
         <ImageView
             android:id="@+id/home_recommend_rvitem_status"
-            android:layout_width="12dp"
-            android:layout_height="12dp"
-            android:layout_marginTop="7dp"
-            android:layout_marginRight="7dp"
-            android:background="@drawable/ic_home_live_middle"
+            android:layout_width="@dimen/x11"
+            android:layout_height="@dimen/y8"
+            android:layout_marginTop="@dimen/y5"
+            android:layout_marginRight="@dimen/x7"
             android:layout_alignRight="@id/home_recommend_rvitem_cover"/>
 
         <TextView
             android:id="@+id/home_recommend_rvitem_anchorNickname"
             android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="5dp"
+            android:layout_height="@dimen/x15"
+            android:layout_marginTop="@dimen/y8"
+            android:layout_marginBottom="@dimen/y3"
             android:layout_alignBottom="@id/home_recommend_rvitem_cover"
             android:layout_alignLeft="@id/home_recommend_rvitem_cover"
             android:textColor="@color/rv_item_nickname" />
 
         <ImageView
             android:id="@+id/home_recommend_rvitem_roomUserCount_iv"
-            android:layout_width="32dp"
-            android:layout_height="24dp"
-            android:layout_marginRight="41dp"
-            android:layout_marginBottom="5dp"
+            android:layout_width="@dimen/x28"
+            android:layout_height="@dimen/y15"
+            android:layout_marginRight="@dimen/x36"
+            android:layout_marginBottom="@dimen/y3"
             android:background="@drawable/ic_home_watch_status"
             android:layout_alignBottom="@id/home_recommend_rvitem_cover"
             android:layout_alignRight="@id/home_recommend_rvitem_cover"
@@ -48,10 +51,10 @@
         <TextView
             android:id="@+id/home_recommend_rvitem_roomUserCount"
             android:layout_width="wrap_content"
-            android:layout_height="24dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="11dp"
-            android:layout_marginBottom="5dp"
+            android:layout_height="@dimen/x21"
+            android:layout_marginLeft="@dimen/y4"
+            android:layout_marginRight="@dimen/x10"
+            android:layout_marginBottom="@dimen/y3"
             android:layout_alignBottom="@id/home_recommend_rvitem_cover"
             android:layout_alignRight="@id/home_recommend_rvitem_cover"
             android:textColor="@color/rv_item_nickname" />
