--- a/app/src/main/res/layout/fragment_me_layout.xml
+++ b/app/src/main/res/layout/fragment_me_layout.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.fragment.home.MeFragment">
+    tools:context=".ui.fragemengt.home.MeFragment">
 
     <include
         android:id="@+id/me_toolbar_include"
