--- a/app/src/main/res/drawable/home_rounded_button.xml
+++ b/app/src/main/res/drawable/home_rounded_button.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" android:padding="10dp">
 
-    <solid android:color="#21d790" />
+    <solid android:color="#21D996" />
 
     <corners
         android:bottomRightRadius="15dp"
