--- a/app/src/main/res/layout/fragment_follow_layout.xml
+++ b/app/src/main/res/layout/fragment_follow_layout.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragemengt.home.FollowFragment">
+    tools:context=".ui.fragment.home.FollowFragment">
     <include layout="@layout/activity_base_toolbar"/>
 
 </FrameLayout>
