--- a/app/src/main/res/layout/fragment_home_layout.xml
+++ b/app/src/main/res/layout/fragment_home_layout.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragemengt.home.HomeFragment">
+    tools:context=".ui.fragment.home.HomeFragment">
+
     <android.support.v7.widget.Toolbar
         android:id="@+id/fragment_home_toolbar"
         android:layout_width="match_parent"
@@ -16,55 +17,63 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:textSize="@dimen/font_size_48px"
+            android:textSize="24sp"
             android:textColor="@color/rv_item_nickname"
             android:text="首页"/>
     </android.support.v7.widget.Toolbar>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/fragment_home_toolbar">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <com.youth.banner.Banner
                 android:id="@+id/home_banner"
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/y78"
-                app:title_textsize="@dimen/font_size_44px"/>
-                <com.scwang.smartrefresh.layout.SmartRefreshLayout
-                    android:id="@+id/fm_home_refreshLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                <LinearLayout
+                android:layout_height="167dp"
+                app:title_textsize="22sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/fm_home_recommend_tv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:textColor="@color/text_view"
+                    android:textSize="22sp" />
 
-                    <TextView
-                        android:id="@+id/fm_home_recommend_tv"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/text_view"
-                        android:textSize="@dimen/font_size_44px" />
-                        <android.support.v7.widget.RecyclerView
-                            android:id="@+id/fm_home_recommend_recycler_view"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    <TextView
-                        android:id="@+id/fm_home_show_live_tv"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/text_view"
-                        android:textSize="@dimen/font_size_44px" />
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/fm_home_recommend_recycler_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-                    <android.support.v7.widget.RecyclerView
-                        android:id="@+id/fm_home_show_live_recycler_view"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                </LinearLayout>
-                </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/fm_home_show_live_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text_view"
+                    android:textSize="22sp" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/fm_home_show_live_recycler_view"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
