--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,4 +46,41 @@
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowAnimationStyle">@style/DefaultAnimation</item>
     </style>
+
+    <!--弹窗theme-->
+    <style name="NiceDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowSoftInputMode">adjustResize|stateVisible</item>
+        <item name="android:windowIsFloating">true</item>
+    </style>
+
+    <style name="dialog_enter_from_bottom_anim" parent="android:Animation">
+        <item name="android:windowEnterAnimation">@anim/slide_in_bottom</item>
+        <item name="android:windowExitAnimation">@anim/slide_out_bottom</item>
+    </style>
+
+
+    <!--送礼弹窗tab-->
+    <style name="LiveHouseGiftDialogTab" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorColor">#20c78a</item>
+        <item name="tabIndicatorHeight">2dp</item>
+        <item name="android:textAllCaps">true</item>
+        <!--<selectedItem name="tabIndicatorColor">@android:color/white</selectedItem>-->
+        <!--<item name="tabPaddingStart">15dp</item>-->
+        <!--<item name="tabPaddingEnd">15dp</item>-->
+        <item name="tabBackground">@color/white</item>
+        <item name="tabTextAppearance">@style/LiveHouseGiftDialogTabText</item>
+        <item name="tabSelectedTextColor">#20c78a</item>
+        <item name="tabGravity">fill</item>
+    </style>
+
+    <style name="LiveHouseGiftDialogTabText" parent="TextAppearance.Design.Tab">
+        <item name="android:textSize">17sp</item>
+        <item name="android:textColor">#646464</item>
+        <!--<selectedItem name="android:textColor">@android:color/white</selectedItem>-->
+        <item name="textAllCaps">true</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
