--- a/app/src/main/res/layout/chat_text.xml
+++ b/app/src/main/res/layout/chat_text.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="312dp"
     android:layout_height="match_parent"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
+    android:paddingTop="2dp"
+    android:paddingBottom="2dp"
     android:textSize="15sp"
     android:paddingLeft="15dp"
-    android:paddingRight="60dp">
+    android:paddingRight="60dp"
+    android:lineSpacingExtra="2dp">
 
 </TextView>
