--- a/app/src/main/res/layout/item_audience.xml
+++ b/app/src/main/res/layout/item_audience.xml
@@ -1,10 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="62dp">
 
     <com.whzl.mengbi.ui.widget.view.CircleImageView
+        android:id="@+id/iv_avatar"
         android:layout_width="44dp"
-        android:layout_height="44dp" />
+        android:layout_height="44dp"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="15dp" />
+
+    <TextView
+        android:id="@+id/tv_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        android:layout_toRightOf="@id/iv_avatar"
+        android:layout_marginLeft="15dp"
+        android:textColor="#323232" />
+
 
 </RelativeLayout>
