--- a/app/src/main/res/layout/chat_text.xml
+++ b/app/src/main/res/layout/chat_text.xml
@@ -1,12 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="312dp"
-    android:layout_height="match_parent"
-    android:paddingTop="2dp"
-    android:paddingBottom="2dp"
-    android:textSize="15sp"
-    android:paddingLeft="15dp"
-    android:paddingRight="60dp"
-    android:lineSpacingExtra="2dp">
 
-</TextView>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginBottom="2dp"
+    android:layout_marginTop="2dp">
+
+    <TextView
+        android:id="@+id/chat_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginRight="50dp"
+        android:lineSpacingExtra="2dp"
+        android:textSize="16sp">
+
+    </TextView>
+
+</RelativeLayout>
