--- a/app/src/main/res/layout/pop_window_gift_count_select.xml
+++ b/app/src/main/res/layout/pop_window_gift_count_select.xml
@@ -25,6 +25,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="123dp"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:overScrollMode="never" />
 
 </LinearLayout>
