--- a/app/src/main/res/layout/chat_text.xml
+++ b/app/src/main/res/layout/chat_text.xml
@@ -13,7 +13,8 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="50dp"
         android:lineSpacingExtra="2dp"
-        android:textSize="16sp">
+        android:textSize="16sp"
+        android:maxLines="100">
 
     </TextView>
 
