--- a/app/src/main/res/layout/dialog_live_house_gift.xml
+++ b/app/src/main/res/layout/dialog_live_house_gift.xml
@@ -93,7 +93,8 @@
                     android:paddingLeft="10dp"
                     android:paddingRight="5dp"
                     android:textColor="#323232"
-                    android:textSize="12dp" />
+                    android:textSize="12dp"
+                    android:text="1314" />
 
                 <Button
                     android:id="@+id/btn_send_gift"
@@ -127,7 +128,8 @@
                 android:inputType="number"
                 android:hint="@string/gift_custom_hint"
                 android:paddingLeft="20dp"
-                android:paddingRight="20dp" />
+                android:paddingRight="20dp"
+                android:maxLength="4" />
 
             <Button
                 android:id="@+id/btn_count_confirm"
