--- a/app/src/main/res/layout/activity_user_info_sex_layout.xml
+++ b/app/src/main/res/layout/activity_user_info_sex_layout.xml
@@ -11,47 +11,45 @@
     <include
         android:id="@+id/user_info_sex_include"
         layout="@layout/activity_base_toolbar"/>
-    <RelativeLayout
-        android:id="@+id/user_info_sex_m_rela"
+
+    <RadioGroup
+        android:id="@+id/user_info_sex_rg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/y4"
         android:background="@color/font_color_51"
         android:layout_below="@id/user_info_sex_include">
-        <Button
-            android:id="@+id/user_info_sex_m"
+        <RadioButton
+            android:id="@+id/user_info_sex_m_rb"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y28"
             android:layout_marginLeft="@dimen/x16"
-            android:gravity="center_vertical"
+            android:layout_marginRight="@dimen/x18"
+            android:checked="true"
             android:text="@string/user_info_sex_m"
+            android:textStyle="bold"
+            android:textSize="@dimen/font_size_30px"
             android:textColor="@color/font_color_47"
-            android:background="@null"/>
-    </RelativeLayout>
-    <View
-        android:id="@+id/user_info_sex_m_bottom_view"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/y1"
-        android:background="@color/font_color_49"
-        android:layout_below="@id/user_info_sex_m_rela"/>
-    <RelativeLayout
-        android:id="@+id/user_info_sex_w_rela"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/font_color_51"
-        android:layout_below="@id/user_info_sex_m_bottom_view">
-        <Button
-            android:id="@+id/user_info_sex_w_but"
+            android:drawablePadding="@dimen/x7"
+            android:drawableRight="@drawable/radiobutton_selector"
+            android:button="@null"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/y1"
+            android:background="@color/font_color_49"/>
+
+        <RadioButton
+            android:id="@+id/user_info_sex_w_rb"
             android:layout_width="match_parent"
             android:layout_height="@dimen/y28"
             android:layout_marginLeft="@dimen/x16"
-            android:gravity="center_vertical"
+            android:layout_marginRight="@dimen/x18"
             android:text="@string/user_info_sex_w"
+            android:textStyle="bold"
+            android:textSize="@dimen/font_size_30px"
             android:textColor="@color/font_color_47"
-            android:background="@null"/>
-    </RelativeLayout>
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/y1"
-        android:background="@color/font_color_49"/>
+            android:drawablePadding="@dimen/x7"
+            android:drawableRight="@drawable/radiobutton_selector"
+            android:button="@null"/>
+    </RadioGroup>
 </RelativeLayout>
