--- a/app/src/main/res/layout/fragment_home_layout.xml
+++ b/app/src/main/res/layout/fragment_home_layout.xml
@@ -1,79 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragment.home.HomeFragment">
-
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/fragment_home_toolbar"
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/fm_home_refreshLayout"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:popupTheme="@style/AppTheme">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="24sp"
-            android:textColor="@color/rv_item_nickname"
-            android:text="首页"/>
-    </android.support.v7.widget.Toolbar>
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/fragment_home_toolbar">
-
-        <LinearLayout
+        android:layout_height="wrap_content">
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="match_parent">
 
             <com.youth.banner.Banner
                 android:id="@+id/home_banner"
                 android:layout_width="wrap_content"
-                android:layout_height="167dp"
-                app:title_textsize="22sp" />
+                android:layout_height="@dimen/y78"
+                app:title_textsize="@dimen/font_size_44px"/>
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/fm_home_recommend_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:textColor="@color/text_view"
+                android:textSize="@dimen/font_size_44px"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/home_banner"/>
 
-                <TextView
-                    android:id="@+id/fm_home_recommend_tv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/text_view"
-                    android:textSize="22sp" />
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/fm_home_recommend_recycler_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/fm_home_recommend_tv"/>
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/fm_home_recommend_recycler_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/fm_home_show_live_tv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:textColor="@color/text_view"
+                android:textSize="@dimen/font_size_44px"
+                android:textStyle="bold"
+                app:layout_constraintTop_toBottomOf="@id/fm_home_recommend_recycler_view"/>
 
-                <TextView
-                    android:id="@+id/fm_home_show_live_tv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/text_view"
-                    android:textSize="22sp" />
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/fm_home_show_live_recycler_view"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/fm_home_show_live_recycler_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/fm_home_show_live_tv"/>
+        </android.support.constraint.ConstraintLayout>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+</ScrollView>
