--- a/app/src/main/res/layout/item_audience_contribuate.xml
+++ b/app/src/main/res/layout/item_audience_contribuate.xml
@@ -3,12 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="62dp">
 
+    <ImageView
+        android:id="@+id/iv_rank"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginLeft="15dp" />
+
     <com.whzl.mengbi.ui.widget.view.CircleImageView
         android:id="@+id/iv_avatar"
         android:layout_width="44dp"
         android:layout_height="44dp"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="15dp" />
+        android:layout_marginStart="48dp"
+        android:layout_marginLeft="6.5dp" />
 
     <TextView
         android:id="@+id/tv_name"
@@ -20,15 +28,25 @@
         android:textColor="#323232"
         android:textSize="15sp" />
 
-    <LinearLayout
-        android:id="@+id/ll_level_container"
+    <ImageView
+        android:id="@+id/iv_level_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_name"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="3dp"
         android:layout_toRightOf="@id/iv_avatar"
-        android:gravity="center_vertical"
-        android:orientation="horizontal" />
+        android:gravity="center_vertical" />
+
+    <TextView
+        android:id="@+id/tv_amount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="22.5dp"
+        android:layout_centerVertical="true"
+        android:textSize="16sp"
+        android:textColor="#f1275b" />
 
 </RelativeLayout>
