送礼动画完成“ git pull git commit -m 送礼动画“

--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -133,6 +133,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
+            <ImageView
+                android:id="@+id/iv_gift_gif"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                android:layout_centerVertical="true"/>
+
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -140,7 +147,6 @@
                 android:layout_marginBottom="10dp">
 
                 <include
-                    android:id="@+id/gift_anim_view"
                     layout="@layout/layout_gift_anim"
                     android:layout_width="wrap_content"
                     android:layout_height="34dp"
