--- a/app/src/main/res/drawable/shape_live_house_gift_anim_bg.xml
+++ b/app/src/main/res/drawable/shape_live_house_gift_anim_bg.xml
@@ -4,7 +4,7 @@
     <corners android:radius="17dp"/>
 
     <gradient
-        android:startColor="#44121212"
-        android:endColor="##00000000"/>
+        android:startColor="#b3131313"
+        android:endColor="#00000000"/>
 
 </shape>
