登录逻辑完成,主页修改

--- a/app/src/main/res/layout/fragment_me_layout.xml
+++ b/app/src/main/res/layout/fragment_me_layout.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/y94"
         android:layout_below="@id/me_toolbar_include"
-        android:background="@color/font_color_46">
+        android:background="@color/colorPrimary">
 
         <com.whzl.mengbi.ui.widget.view.CircleImageView
             android:id="@+id/account_center_usereditor"
