--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:orientation="vertical">
 
-    <Button
-        android:id="@+id/btn_stream"
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/colorAccent" />
+
+    <RadioGroup
+        android:id="@+id/rg_tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="22主" />
+        android:layout_weight="0"
+        android:background="@color/white"
+        android:orientation="horizontal"
+        android:paddingBottom="4dp"
+        android:paddingTop="8dp">
 
-    <Button
-        android:id="@+id/btn_player"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_stream"
-        android:text="2" />
+        <RadioButton
+            android:id="@+id/rb_home"
+            style="@style/main_tab"
+            android:checked="true"
+            android:drawableTop="@drawable/selector_main_tab_home_icon"
+            android:text="@string/home_title" />
 
-</RelativeLayout>
+        <RadioButton
+            android:id="@+id/rb_follow"
+            style="@style/main_tab"
+            android:drawableTop="@drawable/selector_main_tab_follow_icon"
+            android:text="@string/follow_title" />
+
+        <RadioButton
+            android:id="@+id/rb_me"
+            style="@style/main_tab"
+            android:drawableTop="@drawable/selector_main_tab_home_icon"
+            android:text="@string/me_title" />
+
+    </RadioGroup>
+
+
+</LinearLayout>
