--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -163,7 +163,7 @@
                 android:textStyle="bold"
                 android:textSize="24sp"
                 android:layout_centerInParent="true"
-                android:textColor="@color/player_yellow"
+                android:textColor="@color/player_rest"
                 android:visibility="gone"/>
 
             <ImageView
