--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -116,4 +116,24 @@
         <item name="android:textColor">@drawable/selector_main_tab_text_color</item>
         <item name="android:drawablePadding">2dp</item>
     </style>
+
+    <style name="recharge_divider_style">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:background">#e5e5e5</item>
+        <item name="android:layout_marginLeft">15dp</item>
+        <item name="android:layout_marginRight">15dp</item>
+    </style>
+
+    <style name="recharge_pay_way_rb">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">45dp</item>
+        <item name="android:button">@null</item>
+        <item name="android:drawablePadding">7dp</item>
+        <item name="android:paddingLeft">18dp</item>
+        <item name="android:textColor">#323232</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:drawableRight">@drawable/selector_pay_way_rb</item>
+        <item name="android:paddingRight">20dp</item>
+    </style>
 </resources>
